<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:padding="8dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/step_short_description"
            tools:text="Preparation Introduction"
            android:textColor="@color/blue_grey_900"
            android:layout_gravity="center"
            style="@style/Widget.Title"/>
        <TextView
            android:id="@+id/step_description"
            android:layout_marginTop="8dp"
            style="@style/TextAppearance.AppCompat.Medium"
            tools:text="@string/message_no_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</android.support.v7.widget.CardView>