...
    android:gravity="center_vertical"
    android:background="@color/colorPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/step_prev"
        android:text="@string/button_prev_step"
        android:drawableLeft="@drawable/ic_keyboard_arrow_left_black_24dp"
        android:drawableStart="@drawable/ic_keyboard_arrow_left_black_24dp"
        style="@style/Widget.ControlTextButton"
        android:textColor="@color/colorText"
        android:layout_width="wrap_content"
...
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/step_next"
        android:text="@string/button_next_step"
        style="@style/Widget.ControlTextButton"
        android:textColor="@color/colorText"
        android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:drawableEnd="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:layout_width="wrap_content"
...
